--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <ul>
+        <li>
+          <a href="sail.html">sail</a>
+        </li>
+        <li>
+          <a href="diary.html">diary</a>
+        </li>
+        <li>
+          <a href="hmemo.html">hmemo</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
