--- a/front/index.html
+++ b/front/index.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sail</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
-  </head>
-  <body>
-    <div id="app">
-      <ul>
-        <li>
-          <a href="sail.html">sail</a>
-        </li>
-        <li>
-          <a href="diary.html">diary</a>
-        </li>
-        <li>
-          <a href="hmemo.html">hmemo</a>
-        </li>
-      </ul>
-    </div>
-  </body>
+<html lang="ja">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>sail</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/main.ts"></script>
+</body>
+
 </html>
